Bug 460941 DIR_Shutdown not always called on shutdown. Patch r=Neil,sr=bienvenu; unit test fix r=Neil