mailnews/import/test/unit/test_ldif_import.js
@@ -10,6 +10,10 @@
  */
 function run_test()
 {
+  // Due to the import code using nsIAbManager off the main thread, we need
+  // to ensure that it is initialized before we start the main test.
+  var abMgr = Cc["@mozilla.org/abmanager;1"].getService(Ci.nsIAbManager);
+
   var file = do_get_file("../mailnews/import/test/resources/basic_ldif_addressbook.ldif");
   new AbImportHelper(file, "LDIF", "basic_ldif_addressbook",
                      "basic_addressbook").beginImport();
